Bug 291038 - kontact crashes on 'close'
Summary: kontact crashes on 'close'
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: message list (other bugs)
Version First Reported In: 4.8
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-09 09:18 UTC by Zilvinas Valinskas
Modified: 2012-01-10 15:22 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Zilvinas Valinskas 2012-01-09 09:18:02 UTC
Application: kontact (4.8 rc2)
KDE Platform Version: 4.7.97 (4.8 RC2 (4.7.97)
Qt Version: 4.7.4
Operating System: Linux 3.2.0-8-generic x86_64
Distribution: Ubuntu precise (development branch)

-- Information about the crash:
- What I was doing when the application crashed:

I had kontact running (mail view) and closed window. Kontact crashed.

-- Backtrace:
Application: Kontact (kontact), signal: Segmentation fault
[Current thread is 1 (Thread 0x7f3d67b897a0 (LWP 5770))]

Thread 3 (Thread 0x7f3d4d0e4700 (LWP 5771)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007f3d6445573c in WTF::TCMalloc_PageHeap::scavengerThread (this=0x7f3d64e0c220) at wtf/FastMalloc.cpp:2495
#2  0x00007f3d64455869 in WTF::TCMalloc_PageHeap::runScavengerThread (context=<optimized out>) at wtf/FastMalloc.cpp:1618
#3  0x00007f3d5fbfdefc in start_thread (arg=0x7f3d4d0e4700) at pthread_create.c:304
#4  0x00007f3d6516392d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#5  0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7f3d4c7e3700 (LWP 5772)):
#0  0x00007fff7f8f78de in ?? ()
#1  0x00007f3d5dd6105b in __GI_clock_gettime (clock_id=1, tp=0x7f3d4c7e2bb0) at ../sysdeps/unix/clock_gettime.c:100
#2  0x00007f3d657e61b4 in do_gettime (frac=0x7f3d4c7e2bc8, sec=0x7f3d4c7e2bc0) at tools/qelapsedtimer_unix.cpp:123
#3  qt_gettime () at tools/qelapsedtimer_unix.cpp:140
#4  0x00007f3d658a86bd in QTimerInfoList::updateCurrentTime (this=0x2464bb0) at kernel/qeventdispatcher_unix.cpp:339
#5  0x00007f3d658a8a03 in QTimerInfoList::timerWait (this=0x2464bb0, tm=...) at kernel/qeventdispatcher_unix.cpp:442
#6  0x00007f3d658a741c in timerSourcePrepareHelper (src=<optimized out>, timeout=0x7f3d4c7e2c7c) at kernel/qeventdispatcher_glib.cpp:136
#7  0x00007f3d5f73100e in g_main_context_prepare () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#8  0x00007f3d5f73180b in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#9  0x00007f3d5f731a14 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#10 0x00007f3d658a7f0e in QEventDispatcherGlib::processEvents (this=0x23a40d0, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#11 0x00007f3d6587be22 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#12 0x00007f3d6587c027 in QEventLoop::exec (this=0x7f3d4c7e2de0, flags=...) at kernel/qeventloop.cpp:201
#13 0x00007f3d657933bf in QThread::exec (this=<optimized out>) at thread/qthread.cpp:498
#14 0x00007f3d65795e45 in QThreadPrivate::start (arg=0x23c1b60) at thread/qthread_unix.cpp:331
#15 0x00007f3d5fbfdefc in start_thread (arg=0x7f3d4c7e3700) at pthread_create.c:304
#16 0x00007f3d6516392d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#17 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f3d67b897a0 (LWP 5770)):
[KCrash Handler]
#6  MailCommon::FolderCollection::identity (this=0x0) at ../../mailcommon/foldercollection.cpp:274
#7  0x00007f3d03afa0c2 in KMMainWidget::slotForwardAttachedMsg (this=0x28e18f0) at ../../kmail/kmmainwidget.cpp:1914
#8  0x00007f3d03b127df in KMMainWidget::qt_metacall (this=0x28e18f0, _c=QMetaObject::InvokeMetaMethod, _id=125, _a=0x7fff7f83ccb0) at ./kmmainwidget.moc:478
#9  0x00007f3d6588fe8a in QMetaObject::activate (sender=0x2a67f10, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff7f83ccb0) at kernel/qobject.cpp:3278
#10 0x00007f3d662366a2 in QAction::triggered (this=<optimized out>, _t1=false) at .moc/release-shared/moc_qaction.cpp:263
#11 0x00007f3d6623688f in QAction::activate (this=0x2a67f10, event=<optimized out>) at kernel/qaction.cpp:1257
#12 0x00007f3d665f4f2a in QAbstractButtonPrivate::click (this=0x2b85ce0) at widgets/qabstractbutton.cpp:528
#13 0x00007f3d665f51dc in QAbstractButton::mouseReleaseEvent (this=0x2a62a40, e=0x7fff7f83d3d0) at widgets/qabstractbutton.cpp:1121
#14 0x00007f3d666b1dca in QToolButton::mouseReleaseEvent (this=<optimized out>, e=<optimized out>) at widgets/qtoolbutton.cpp:721
#15 0x00007f3d6628d7da in QWidget::event (this=0x2a62a40, event=0x7fff7f83d3d0) at kernel/qwidget.cpp:8295
#16 0x00007f3d6623cf64 in notify_helper (e=0x7fff7f83d3d0, receiver=0x2a62a40, this=0x219baa0) at kernel/qapplication.cpp:4486
#17 QApplicationPrivate::notify_helper (this=0x219baa0, receiver=0x2a62a40, e=0x7fff7f83d3d0) at kernel/qapplication.cpp:4458
#18 0x00007f3d662427ab in QApplication::notify (this=<optimized out>, receiver=0x2a62a40, e=0x7fff7f83d3d0) at kernel/qapplication.cpp:4047
#19 0x00007f3d66f45ad6 in KApplication::notify (this=0x7fff7f83e000, receiver=0x2a62a40, event=0x7fff7f83d3d0) at ../../kdeui/kernel/kapplication.cpp:311
#20 0x00007f3d6587cc2c in QCoreApplication::notifyInternal (this=0x7fff7f83e000, receiver=0x2a62a40, event=0x7fff7f83d3d0) at kernel/qcoreapplication.cpp:787
#21 0x00007f3d6623df32 in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#22 QApplicationPrivate::sendMouseEvent (receiver=0x2a62a40, event=0x7fff7f83d3d0, alienWidget=0x2a62a40, nativeWidget=0x24414b0, buttonDown=0x2a62a40, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3146
#23 0x00007f3d662bd485 in QETWidget::translateMouseEvent (this=0x24414b0, event=<optimized out>) at kernel/qapplication_x11.cpp:4568
#24 0x00007f3d662bc3fe in QApplication::x11ProcessEvent (this=0x7fff7f83e000, event=0x7fff7f83dbf0) at kernel/qapplication_x11.cpp:3690
#25 0x00007f3d662e4f52 in x11EventSourceDispatch (s=0x219cf70, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#26 0x00007f3d5f73158a in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#27 0x00007f3d5f731950 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#28 0x00007f3d5f731a14 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#29 0x00007f3d658a7ea6 in QEventDispatcherGlib::processEvents (this=0x216f170, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:422
#30 0x00007f3d662e4bbe in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=<optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#31 0x00007f3d6587be22 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#32 0x00007f3d6587c027 in QEventLoop::exec (this=0x7fff7f83df90, flags=...) at kernel/qeventloop.cpp:201
#33 0x00007f3d65880759 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1064
#34 0x0000000000403629 in main (argc=1, argv=0x7fff7f83e628) at ../../../kontact/src/main.cpp:218

Reported using DrKonqi
Comment 1 Allen Winter 2012-01-10 15:22:03 UTC
Git commit 3f11b8e2cdb2267ec1293d91ce432dc6df77608b by Allen Winter.
Committed on 10/01/2012 at 15:42.
Pushed by winterz into branch 'master'.

in slotForwardInlineMsg(), slotForwardAttachedMsg() and
slotCustomForwardMsg() add a crash guard for mCurrentFolder.
MERGE: 4.8
FIXED-IN: 4.8

M  +12   -0    kmail/kmmainwidget.cpp

http://commits.kde.org/kdepim/3f11b8e2cdb2267ec1293d91ce432dc6df77608b
Comment 2 Allen Winter 2012-01-10 15:22:03 UTC
Git commit 4176a25a8147f418d843eeadce34a76dd7212c4a by Allen Winter.
Committed on 10/01/2012 at 15:42.
Pushed by winterz into branch 'KDE/4.8'.

in slotForwardInlineMsg(), slotForwardAttachedMsg() and
slotCustomForwardMsg() add a crash guard for mCurrentFolder.
MERGE: 4.8
FIXED-IN: 4.8
(cherry picked from commit 3f11b8e2cdb2267ec1293d91ce432dc6df77608b)

M  +12   -0    kmail/kmmainwidget.cpp

http://commits.kde.org/kdepim/4176a25a8147f418d843eeadce34a76dd7212c4a