in slotForwardInlineMsg(), slotForwardAttachedMsg() and slotCustomForwardMsg() add a crash guard for mCurrentFolder.

BUG: 291038
MERGE: 4.8
FIXED-IN: 4.8